traces/bug_551.txt
src/femlib/GQuadTree.cpp:629: error: DEAD_STORE
  The value written to &it00 (type int) is never used.
Showing all 1 steps of the trace


src/femlib/GQuadTree.cpp:629:5: Write of unused value
627.     if(searchMethod>1) goto PICHON;
628.     if ( tstart )
629.       it00=it =  Th(tstart);
           ^
630.     else  if(quadtree)
631.       {  
